# go-secure/MyGram/docs/swagger.json
@@ -14,7 +14,7 @@
             "get": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Get all comment by photo id user",
@@ -55,7 +55,7 @@
             "post": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Create comment photo user",
@@ -102,7 +102,7 @@
             "put": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Update comment by photo id user",
@@ -154,7 +154,7 @@
             "delete": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Delete comment by photo id user",
@@ -203,7 +203,7 @@
             "get": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Get comment by photo id user",
@@ -252,7 +252,7 @@
             "get": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Get all photo user",
@@ -287,7 +287,7 @@
             "post": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Create photo user",
@@ -334,7 +334,7 @@
             "get": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Get photo user",
@@ -381,7 +381,7 @@
             "put": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Update photo user",
@@ -433,7 +433,7 @@
             "delete": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Delete photo user",
@@ -482,7 +482,7 @@
             "get": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Get all social media user",
@@ -517,7 +517,7 @@
             "post": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Create social media user",
@@ -564,7 +564,7 @@
             "get": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Get social media user",
@@ -611,7 +611,7 @@
             "put": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Update social media user",
@@ -663,7 +663,7 @@
             "delete": {
                 "security": [
                     {
-                        "token": []
+                        "JWT": []
                     }
                 ],
                 "description": "Delete social media user",
@@ -778,7 +778,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.RequestUserRegister"
                         }
                     }
                 ],
@@ -923,6 +923,32 @@
                 }
             }
         },
+        "model.RequestUserRegister": {
+            "type": "object",
+            "required": [
+                "age",
+                "email",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "maximum": 130,
+                    "minimum": 8
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 6
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "model.ResponseDeleted": {
             "type": "object",
             "properties": {
@@ -968,48 +994,13 @@
                     "type": "integer"
                 }
             }
-        },
-        "model.User": {
-            "type": "object",
-            "required": [
-                "age",
-                "email",
-                "password",
-                "username"
-            ],
-            "properties": {
-                "age": {
-                    "type": "integer",
-                    "maximum": 130,
-                    "minimum": 8
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 6
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
         }
     },
     "securityDefinitions": {
-        "token": {
-            "description": "token for authentication",
+        "JWT": {
+            "description": "description: Enter the token with the `Bearer: ` prefix, e.g. \"Bearer abcde12345\".",
             "type": "apiKey",
-            "name": "Authentication",
+            "name": "Authorization",
             "in": "header"
         }
     }
